--- a/design/index.html
+++ b/design/index.html
@@ -30,9 +30,9 @@
             <div class="demo-logo"><a href=""><img src="img/hoiio-logo.png"></a></div>
             <div class="demo-name-box">
                 <div class="demo-name">design standards</div>
-                <span class="demo-subname">make our mark on the product industry</span>
+                <span class="demo-subname">making our mark in the SaaS sea</span>
             </div>
-            <a href="#basic" class="btn demo-btn">Let's explore</a>
+            <a href="#basic" class="btn demo-btn">Explore</a>
         </div>
     </header>
 
