--- a/design/system/layout.html
+++ b/design/system/layout.html
@@ -15,14 +15,14 @@
     <script src="../source/js/modernizr-custom.js"></script>
 
     <!-- Bootstrap -->
-	<link rel="stylesheet" type="text/css" href="../../hoiio-ui/semantic.min.css" />
+	<link rel="stylesheet" type="text/css" href="../hoiio-ui/semantic.min.css" />
 	<!-- Main styles -->
 	<link rel="stylesheet" type="text/css" href="../source/css/hoiio-semantic.css" />
 	<!-- Highlight -->
 	<link rel="stylesheet" type="text/css" href="../source/css/tomorrow.css" />
 	
 </head>
-<body>
+<body id="detail">
     <div class="se-pre-con"></div>
     <!-- Header -->
     <header class="header"></header>
@@ -40,7 +40,7 @@
                 <!-- Workspace Layout -->
                 <div class="item">
                     <h3 class="title-item">Workspace Layout</h3>
-                    <p>Workspace layouts consist of a page header, a main content area and a sidebar. The content that displays in forms</p>
+                    <p>A workspace layout consists of a page header, a main content area and a sidebar. It is ideal for viewing and editing multiple items.</p>
                     <div class="display">
 <div class="ui grid">
     <div class="three column row">
@@ -89,7 +89,7 @@
                     <h3 class="title-item">Specific Layout</h3>
                     <div class="display">
                     
-                    <p>Rows are groups of columns which are aligned horizontally. The columns are nested inside of a row.</p>
+                    <p>Specific layout is used for a certain event or action that is different from the layout declared above. For example, the board layout displays items in columns that are based on a picklist field on the object being viewed.</p>
 <div class="ui grid">
     <div class="three column row">
         <div class="column">
@@ -118,7 +118,7 @@
     
 	
     <!-- Latest compiled and minified JavaScript -->
-    <script src="../../hoiio-ui/semantic.min.js"></script>
+    <script src="../hoiio-ui/semantic.min.js"></script>
 	<script src="../source/js/highlight.pack.js"></script>
     <script src="../source/js/main.js"></script>
     <script src="../source/js/component.js"></script>
