--- a/design/system/grid.html
+++ b/design/system/grid.html
@@ -15,14 +15,14 @@
     <script src="../source/js/modernizr-custom.js"></script>
 
     <!-- Bootstrap -->
-	<link rel="stylesheet" type="text/css" href="../../hoiio-ui/semantic.min.css" />
+	<link rel="stylesheet" type="text/css" href="../hoiio-ui/semantic.min.css" />
 	<!-- Main styles -->
 	<link rel="stylesheet" type="text/css" href="../source/css/hoiio-semantic.css" />
 	<!-- Highlight -->
 	<link rel="stylesheet" type="text/css" href="../source/css/tomorrow.css" />
 	
 </head>
-<body>
+<body id="detail">
     <div class="se-pre-con"></div>
     <!-- Header -->
     <header class="header"></header>
@@ -329,7 +329,7 @@
     
 	
     <!-- Latest compiled and minified JavaScript -->
-    <script src="../../hoiio-ui/semantic.min.js"></script>
+    <script src="../hoiio-ui/semantic.min.js"></script>
 	<script src="../source/js/highlight.pack.js"></script>
     <script src="../source/js/main.js"></script>
     <script src="../source/js/component.js"></script>
