--- a/design/system/typography.html
+++ b/design/system/typography.html
@@ -15,14 +15,14 @@
     <script src="../source/js/modernizr-custom.js"></script>
 
     <!-- Bootstrap -->
-	<link rel="stylesheet" type="text/css" href="../../hoiio-ui/semantic.min.css" />
+	<link rel="stylesheet" type="text/css" href="../hoiio-ui/semantic.min.css" />
 	<!-- Main styles -->
 	<link rel="stylesheet" type="text/css" href="../source/css/hoiio-semantic.css" />
 	<!-- Highlight -->
 	<link rel="stylesheet" type="text/css" href="../source/css/tomorrow.css" />
 	
 </head>
-<body>
+<body id="detail">
     <div class="se-pre-con"></div>
     <!-- Header -->
     <header class="header"></header>
@@ -105,17 +105,18 @@
                 <div class="group-item">
                     <h2>Paragraph</h2>
                     <!-- Three equal columns -->
-                    <div class="item paragraph">
-                         <div class="display">
+                    <div class="item">
+                        <p>With 14px font size and 25px line height.</p>
+                        <div class="display">
     <div class="ui grid">
         <div class="two column row">
             <div class="column">
                 <h5>1ST COLUMN</h5>
-                <p>Like its master, it was entirely devoid of hair, but was of a dark slate color and exceeding smooth and glossy. Its belly was white, and its legs shaded from the slate of its shoulders and hips to a vivid yellow at the feet. The feet themselves were heavily padded and nailless, which fact had also contributed to the noiselessness of their approach, and, in common with a multiplicity of legs, is a characteristic feature of the fauna of Mars.</p>
+                <p class="paragraph">Like its master, it was entirely devoid of hair, but was of a dark slate color and exceeding smooth and glossy. Its belly was white, and its legs shaded from the slate of its shoulders and hips to a vivid yellow at the feet. The feet themselves were heavily padded and nailless, which fact had also contributed to the noiselessness of their approach, and, in common with a multiplicity of legs, is a characteristic feature of the fauna of Mars.</p>
             </div>
             <div class="column">
                 <h5>2ND COLUMN</h5>
-                <p>Dispatching one of my men to Tars Tarkas for a detail of fifty Tharks, with word of my intentions, I ordered ten warriors to capture and open one of the great gates while with the nine remaining I took the other. We were to do our work quietly, no shots were to be fired and no general advance made until I had reached the palace with my fifty Tharks.</p>
+                <p class="paragraph">Dispatching one of my men to Tars Tarkas for a detail of fifty Tharks, with word of my intentions, I ordered ten warriors to capture and open one of the great gates while with the nine remaining I took the other. We were to do our work quietly, no shots were to be fired and no general advance made until I had reached the palace with my fifty Tharks.</p>
         </div>
     </div>
                             </div>
@@ -140,7 +141,7 @@
     
 	
     <!-- Latest compiled and minified JavaScript -->
-    <script src="../../hoiio-ui/semantic.min.js"></script>
+    <script src="../hoiio-ui/semantic.min.js"></script>
 	<script src="../source/js/highlight.pack.js"></script>
     <script src="../source/js/main.js"></script>
     <script src="../source/js/component.js"></script>
