--- a/design/samples/forms.html
+++ b/design/samples/forms.html
@@ -15,7 +15,7 @@
     <script src="../source/js/modernizr-custom.js"></script>
 
     <!-- Bootstrap -->
-	<link rel="stylesheet" type="text/css" href="../../hoiio-ui/semantic.min.css" />
+	<link rel="stylesheet" type="text/css" href="../hoiio-ui/semantic.min.css" />
 	<!-- Main styles -->
 	<link rel="stylesheet" type="text/css" href="../source/css/sample.css" />
 
@@ -77,7 +77,7 @@
 </div>
     
     <!-- Latest compiled and minified JavaScript -->
-    <script src="../../hoiio-ui/semantic.min.js"></script>
+    <script src="../hoiio-ui/semantic.min.js"></script>
     <script src="../source/js/main.js"></script>
 </body>
 </html>
