--- a/design/samples/forms.html
+++ b/design/samples/forms.html
@@ -279,7 +279,7 @@
   <div class="item" data-value="vu">Vanuatu</div>
   <div class="item" data-value="va">Vatican City</div>
   <div class="item" data-value="ve">Venezuela</div>
-  <div class="item" data-value="Vietnam (+84)" data-text="+84">Vietnam (+84)</div>
+  <div class="item" data-value="Vietnam (+84)" data-text="<i class='vn flag'></i>+84">Vietnam (+84)</div>
   <div class="item" data-value="wf">Wallis and Futuna</div>
   <div class="item" data-value="eh">Western Sahara</div>
   <div class="item" data-value="ye">Yemen</div>
