--- a/design/system/icon.html
+++ b/design/system/icon.html
@@ -15,7 +15,7 @@
     <script src="../source/js/modernizr-custom.js"></script>
 
     <!-- Bootstrap -->
-	<link rel="stylesheet" type="text/css" href="../../dist/semantic.css" />
+	<link rel="stylesheet" type="text/css" href="../dist/semantic.css" />
 	<!-- Main styles -->
 	<link rel="stylesheet" type="text/css" href="../source/css/hoiio-semantic.css" />
 	<!-- Highlight -->
