--- a/design/system/icon.html
+++ b/design/system/icon.html
@@ -696,7 +696,7 @@
     
 	
     <!-- Latest compiled and minified JavaScript -->
-    <script src="../../dist/semantic.min.js"></script>
+    <script src="../dist/semantic.min.js"></script>
 	<script src="../source/js/highlight.pack.js"></script>
     <script src="../source/js/main.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
