--- a/design/system/grid.html
+++ b/design/system/grid.html
@@ -41,7 +41,7 @@
                         <div class="block">
                             
                             <p class="description">Grid systems are used for creating page layouts through a series of rows and columns that allows for content to be stacked both vertically and horizontally in a consistent and easily manageable fashion.
-                            <h3 id="grid" class="title">Working of Grid System</h3>
+                            <h3 id="grid-definition" class="title">Working of Grid System</h3>
                             <p class="description">Below is how the grid system works. </p>
 <div class="ui bulleted list">
     <div class="item"><strong>Container</strong> : container can be used alongside a grid to provide a responsive, fixed width container for wrapping the contents of a page.</div>
@@ -654,7 +654,7 @@
                         <div id="sticky">
                         <ul class="category">    
                             <li class="title">Definition</li>    
-                            <li class="item"><a href="#grid">Working of Grid System</a></li>
+                            <li class="item"><a href="#grid-definition">Working of Grid System</a></li>
                             <li class="item"><a href="#grid-option">Grid Options</a></li>
                             <li class="title">Pre-defined Class</li>   
                             <li class="item"><a href="#width-column">Width of Column</a></li>
