--- a/design/system/grid.html
+++ b/design/system/grid.html
@@ -660,7 +660,7 @@
                             <li class="item"><a href="#width-column">Width of Column</a></li>
                             <li class="item"><a href="#row-grouping">Row Grouping</a></li>
                             <li class="title">Container</li>   
-                            <li class="item"><a href="#aligned"></a>Aligned</li>
+                            <li class="item"><a href="#aligned">Aligned</a></li>
                             <li class="item"><a href="#multi-aligned">Multi Aligned</a></li>
                             <li class="title">Responsive</li>  
                             <li class="item"><a href="#stackable">Stackable</a></li>
