--- a/design/system/typography.html
+++ b/design/system/typography.html
@@ -402,7 +402,7 @@
                             <li class="title">Definition</li>    
                             <li class="item"><a href="#arial">Arial Font</a></li>
                             <li class="item"><a href="#paragraph">Paragraph</a></li>
-                            <li class="item"><a href="#headers">Hearders</a></li>
+                            <li class="item"><a href="#headers">Headers</a></li>
                             <li class="title">Types</li>    
                             <li class="item"><a href="#image">Image</a></li>
                             <li class="item"><a href="#subheader">Subheader</a></li>
