--- a/design/samples/forms.html
+++ b/design/samples/forms.html
@@ -15,7 +15,7 @@
     <script src="../source/js/modernizr-custom.js"></script>
 
     <!-- Bootstrap -->
-	<link rel="stylesheet" type="text/css" href="../dist/semantic.min.css" />
+	<link rel="stylesheet" type="text/css" href="../dist/semantic.css" />
 	<!-- Main styles -->
 	<link rel="stylesheet" type="text/css" href="../source/css/sample.css" />
 
@@ -319,6 +319,8 @@
     
     <!-- Latest compiled and minified JavaScript -->
     <script src="../dist/semantic.min.js"></script>
-    <script src="../source/js/main.js"></script>
+    <script src="../source/js/content.js"></script>
+    <script src="../source/js/hoiio.js"></script>
+    <script src="../source/js/tablesort.min.js"></script>
 </body>
 </html>
