--- a/design/samples/modal-signin.html
+++ b/design/samples/modal-signin.html
@@ -15,7 +15,7 @@
     <script src="../source/js/modernizr-custom.js"></script>
 
     <!-- Bootstrap -->
-	<link rel="stylesheet" type="text/css" href="../../dist/semantic.min.css" />
+	<link rel="stylesheet" type="text/css" href="../dist/semantic.min.css" />
 	<!-- Main styles -->
 	<link rel="stylesheet" type="text/css" href="../source/css/sample.css" />
 
@@ -59,7 +59,7 @@
     
  
     <!-- Latest compiled and minified JavaScript -->
-    <script src="../../dist/semantic.min.js"></script>
+    <script src="../dist/semantic.min.js"></script>
     <script>
     $('.login.modal')
         .modal({
