--- a/design/samples/modal-signin.html
+++ b/design/samples/modal-signin.html
@@ -48,7 +48,7 @@
                 </div>
 
                 <div class="field">
-                    <button class="ui primary fluid button" type="submit">Sign in</button>
+                    <button class="ui primary fluid button" type="submit">Log in</button>
                 </div>
              </form>
         </div>
