--- a/design/training/design.html
+++ b/design/training/design.html
@@ -51,7 +51,7 @@
                 <input class="dropdown-toggle" type="text">
                 <div class="dropdown-text"><i class="fa fa-bars"></i></div>
                 <ul class="dropdown-content">
-                    <li><a href="/design/training">Home</a></li>
+                    <li><a href="/design/training/">Home</a></li>
                     <li><a href="/design/training/research">Research</a></li>
                     <li><a href="/design/training/interaction">Interaction</a></li>
                     <li><a href="/design/training/information">Information</a></li>
