--- a/design/training/interaction.html
+++ b/design/training/interaction.html
@@ -51,10 +51,10 @@
                 <input class="dropdown-toggle" type="text">
                 <div class="dropdown-text"><i class="fa fa-bars"></i></div>
                 <ul class="dropdown-content">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="research.html">Research</a></li>
-                    <li><a href="design.html">UI Design</a></li>
-                    <li><a href="information.html">Information</a></li>
+                    <li><a href="/design/training/">Home</a></li>
+                    <li><a href="/design/training/research">Research</a></li>
+                    <li><a href="/design/training/design">UI Design</a></li>
+                    <li><a href="/design/training/information">Information</a></li>
                 </ul>
             </div>
         </div>
