--- a/design/training/information.html
+++ b/design/training/information.html
@@ -6,7 +6,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>UX Training / Information</title>
-  <meta name="description" content="Hoiio UX Training Sessions">
+  <meta name="description" content="Through our UX training, we help you build a knowledge and skill UX strategy, learn the way how to research users, build wireframes, design beautiful interfaces, implement best practices for common design patterns. Yes! Anyone can become a UX master.">
   <meta name="author" content="Marcus">
 
   <!-- Mobile Specific Metas
